Begin command catlogue and write .h files
First commands are locomotion, based on the command guides.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,4 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
-project(packet-builder)
+project(sanbot-mcu-bridge)
 set(CMAKE_CXX_STANDARD 20)
-add_executable(packet-builder src/main.cpp)
+
+add_executable(sanbot-mcu-bridge
+  src/main.cpp
+  src/control-catalogue.cpp
+  src/packet-assembler.cpp
+  src/usb-send.cpp
+)
+
+target_link_libraries(sanbot-mcu-bridge usb-1.0)
